--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "dependencies": {
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
+    "@types/react": "^18.0.26",
     "astro": "^1.6.15",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.1",
+    "sass": "^1.57.0",
     "tailwindcss": "^3.2.4"
   }
 }
