--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.26",
     "astro": "^1.6.15",
     "clsx": "^1.2.1",
+    "disable-scroll": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
