--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.4"
   }
 }
