--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@astrojs/tailwind": "^2.1.3",
     "@types/react": "^18.0.26",
     "astro": "^1.6.15",
-    "clsx": "^1.2.1",
     "disable-scroll": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,5 +22,8 @@
     "react-intersection-observer": "^9.4.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "clsx": "^1.2.1"
   }
 }
